Added responsive layout

--- a/index.html
+++ b/index.html
@@ -4,59 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SquareEyes</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./CSS/styles.css" />
-    <script
-      src="https://kit.fontawesome.com/868d223859.js"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body>
-    <header>
-      <div class="header-banner">
-        <img
-          class="selogo"
-          src="./Images/SquareEyes_Logo - Copy.png"
-          alt="logo"
-        />
-      </div>
-    </header>
-
+    <header><h1>Header</h1></header>
     <nav>
-      <div class="nav-side-bar">
-        <ul>
-          <a href="movies" class="sidebaricon"
-            ><i class="fa-solid fa-video"></i>
-          </a>
-          <a href="category" class="sidebaricon"
-            ><i class="fa-solid fa-rectangle-list"></i
-          ></a>
-          <a href="star" class="sidebaricon"
-            ><i class="fa-solid fa-star"></i
-          ></a>
-          <a href="profile" class="sidebaricon"
-            ><i class="fa-solid fa-user"></i
-          ></a>
-        </ul>
-      </div>
+      <ul>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+      </ul>
     </nav>
-
     <main>
-      <h1>Welcome to SquareEyes</h1>
+      <h2>Main</h2>
     </main>
-
     <footer>
-      <div class="information-footer">
-        <div class="contact">Contact</div>
-        <div class="about">about</div>
-
-        <div class="payment-footer">
-          <div><i class="fa-brands fa-cc-mastercard iconpayment"></i></div>
-          <div><i class="fa-brands fa-cc-visa"></i></div>
-          <div><i class="fa-brands fa-cc-paypal"></i></div>
-          <div><i class="fa-brands fa-google-pay"></i></div>
-        </div>
-      </div>
+      <h2>Footer</h2>
     </footer>
   </body>
 </html>
