Begun process of adding items

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header><h1>Header</h1></header>
     <nav>
       <ul>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
+        <li><a href="#">Movies</a></li>
+        <li><a href="#">Categories</a></li>
+        <li><a href="#">Newly Listed</a></li>
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">Sign Out</a></li>
       </ul>
     </nav>
     <main>
