--- a/index.html
+++ b/index.html
@@ -6,23 +6,172 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./CSS/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/868d223859.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header><h1>Header</h1></header>
+    <header>
+      <div class="header-topbar">
+        <div class="logo-top">
+          <img
+            src="./Images/SquareEyes_Logo - Copy.png"
+            alt="logo"
+            class="SElogo"
+          />
+        </div>
+      </div>
+    </header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <nav>
       <ul>
-        <li><a href="#">Movies</a></li>
-        <li><a href="#">Categories</a></li>
-        <li><a href="#">Newly Listed</a></li>
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Sign Out</a></li>
+        <li><a class="topbar" href="#">Movies</a></li>
+        <li><a class="topbar" href="#">Categories</a></li>
+        <li><a class="topbar" href="#">Newly Listed</a></li>
+        <li><a class="topbar" href="#">Profile</a></li>
+        <!--  Move up to header -->
+        <li><a class="topbar" href="#">Sign Out</a></li>
+        <!--  Move up to header -->
       </ul>
     </nav>
+
+
+
+    
     <main>
-      <h2>Main</h2>
+      <!---Section For Mobile Page-->
+      <section class="mid-section-container-mobile">
+        <div class="card-mobile">
+          <img
+            src="./Stretched Images/HobbsShawStretched.jpg"
+            class="movie-img"
+          />
+          <div class="movisectioncontainer">
+            <h4 class="mobile-information">Hobbs & Shaw</h4>
+            <p class="mobile-information">Infor</p>
+          </div>
+        </div>
+
+        <div class="card-mobile">
+          <img
+            src="./Stretched Images/ToyStory Stretched.jpg"
+            class="movie-img"
+          />
+          <div class="movisectioncontainer">
+            <h4 class="mobile-information">ToyStory 4</h4>
+            <p class="mobile-information">INFORMATION</p>
+          </div>
+        </div>
+
+        <div class="card-mobile">
+          <img
+            src="./Stretched Images/Godzillastretch.jpeg"
+            class="movie-img"
+          />
+          <div class="movisectioncontainer">
+            <h4 class="mobile-information">Godzilla</h4>
+            <p class="mobile-information">INFORMATION</p>
+          </div>
+        </div>
+
+        <div class="card-mobile">
+          <img src="./Stretched Images/IMG_2862.jpeg" class="movie-img" />
+          <div class="movisectioncontainer">
+            <h4 class="mobile-information">Once upon a time in Hollywood</h4>
+            <p class="mobile-information">INFORMATION</p>
+          </div>
+        </div>
+
+        <div class="card-mobile">
+          <img src="/Stretched Images/ScreamStretched.jpeg" class="movie-img" />
+          <div class="movisectioncontainer">
+            <h4 class="mobile-information">Once upon a time in Hollywood</h4>
+            <p class="mobile-information">INFORMATION</p>
+          </div>
+        </div>
+
+        <div class="card-mobile">
+          <img
+            src="/Stretched Images/SweetHeart Stretch.jpeg"
+            class="movie-img"
+          />
+          <div class="movisectioncontainer">
+            <h4 class="mobile-information">Once upon a time in Hollywood</h4>
+            <p class="mobile-information">INFORMATION</p>
+          </div>
+        </div>
+
+        <div class="card-mobile">
+          <img src="/Stretched Images/AdamsStretch.jpeg" class="movie-img" />
+          <div class="movisectioncontainer">
+            <h4 class="mobile-information">Once upon a time in Hollywood</h4>
+            <p class="mobile-information">INFORMATION</p>
+          </div>
+        </div>
+
+        <div class="card-mobile">
+          <img src="/Stretched Images/BatmanStretch.jpeg" class="movie-img" />
+          <div class="movisectioncontainer">
+            <h4 class="mobile-information">Once upon a time in Hollywood</h4>
+            <p class="mobile-information">INFORMATION</p>
+          </div>
+        </div>
+      </section>
+      <!--Section For Mobile Page-->
     </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <footer>
-      <h2>Footer</h2>
+      <div class="footer-bar">
+        <div class="copyright">©Copyright</div>
+        <div class="siteinfo">About</div>
+        <div class="siteinfocont">Contact Us</div>
+
+        <div class="payment">
+          <a href="#"> <i class="fa-brands fa-cc-visa visa"></i> </a>
+          <a href="#">
+            <i class="fa-brands fa-cc-mastercard mastercard"></i>
+          </a>
+          <a href="#"> <i class="fa-brands fa-google-pay googlepay"></i> </a>
+          <a href="#"> <i class="fa-brands fa-cc-paypal paypal"></i> </a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
