--- a/index.html
+++ b/index.html
@@ -10,12 +10,6 @@
       src="https://kit.fontawesome.com/868d223859.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <header>
@@ -30,132 +24,149 @@
       </div>
     </header>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <nav>
       <ul>
         <li><a class="topbar" href="#">Movies</a></li>
         <li><a class="topbar" href="#">Categories</a></li>
-        <li><a class="topbar" href="#">Newly Listed</a></li>
-        <li><a class="topbar" href="#">Profile</a></li>
-        <!--  Move up to header -->
-        <li><a class="topbar" href="#">Sign Out</a></li>
+        <div class="right-bar">
+          <li><a class="topbar" href="#">Profile</a></li>
+          <!--  Move up to header -->
+          <li><a class="topbar" href="#">Sign Out</a></li>
+        </div>
         <!--  Move up to header -->
       </ul>
     </nav>
 
-
-
-    
     <main>
       <!---Section For Mobile Page-->
-      <section class="mid-section-container-mobile">
-        <div class="card-mobile">
+      <section>
+        <div class="image">
           <img
-            src="./Stretched Images/HobbsShawStretched.jpg"
-            class="movie-img"
+            src="./Stretched Images/BatmanStretch.jpeg"
+            class="image__img"
+            ;
           />
-          <div class="movisectioncontainer">
-            <h4 class="mobile-information">Hobbs & Shaw</h4>
-            <p class="mobile-information">Infor</p>
+          <div
+            class="image__overlay image__overlay--blur image__overlay--primary"
+          >
+            <div class="image__overlay">
+              <div class="image__title">The Batman</div>
+              <p class="image__description">Star</p>
+            </div>
           </div>
         </div>
 
-        <div class="card-mobile">
+        <div class="image">
           <img
-            src="./Stretched Images/ToyStory Stretched.jpg"
-            class="movie-img"
+            src="./Stretched Images/AdamsStretch.jpeg"
+            class="image__img"
+            ;
           />
-          <div class="movisectioncontainer">
-            <h4 class="mobile-information">ToyStory 4</h4>
-            <p class="mobile-information">INFORMATION</p>
+          <div
+            class="image__overlay image__overlay--blur image__overlay--primary"
+          >
+            <div class="image__overlay">
+              <div class="image__title">The Addams Family</div>
+              <p class="image__description">Star and by</p>
+            </div>
           </div>
         </div>
 
-        <div class="card-mobile">
+        <div class="image">
           <img
             src="./Stretched Images/Godzillastretch.jpeg"
-            class="movie-img"
+            class="image__img"
+            ;
           />
-          <div class="movisectioncontainer">
-            <h4 class="mobile-information">Godzilla</h4>
-            <p class="mobile-information">INFORMATION</p>
+          <div
+            class="image__overlay image__overlay--blur image__overlay--primary"
+          >
+            <div class="image__overlay">
+              <div class="image__title">Godzilla II</div>
+              <p class="image__description">Many Roses</p>
+            </div>
           </div>
         </div>
 
-        <div class="card-mobile">
-          <img src="./Stretched Images/IMG_2862.jpeg" class="movie-img" />
-          <div class="movisectioncontainer">
-            <h4 class="mobile-information">Once upon a time in Hollywood</h4>
-            <p class="mobile-information">INFORMATION</p>
-          </div>
-        </div>
-
-        <div class="card-mobile">
-          <img src="/Stretched Images/ScreamStretched.jpeg" class="movie-img" />
-          <div class="movisectioncontainer">
-            <h4 class="mobile-information">Once upon a time in Hollywood</h4>
-            <p class="mobile-information">INFORMATION</p>
-          </div>
-        </div>
-
-        <div class="card-mobile">
+        <div class="image">
           <img
-            src="/Stretched Images/SweetHeart Stretch.jpeg"
-            class="movie-img"
+            src="./Stretched Images/ToyStory Stretched.jpg"
+            class="image__img"
+            ;
           />
-          <div class="movisectioncontainer">
-            <h4 class="mobile-information">Once upon a time in Hollywood</h4>
-            <p class="mobile-information">INFORMATION</p>
+          <div
+            class="image__overlay image__overlay--blur image__overlay--primary"
+          >
+            <div class="image__overlay">
+              <div class="image__title">ToyStory 4</div>
+              <p class="image__description">Many Roses</p>
+            </div>
           </div>
         </div>
 
-        <div class="card-mobile">
-          <img src="/Stretched Images/AdamsStretch.jpeg" class="movie-img" />
-          <div class="movisectioncontainer">
-            <h4 class="mobile-information">Once upon a time in Hollywood</h4>
-            <p class="mobile-information">INFORMATION</p>
+        <div class="image">
+          <img
+            src="./Stretched Images/SweetHeart Stretch.jpeg"
+            class="image__img"
+            ;
+          />
+          <div
+            class="image__overlay image__overlay--blur image__overlay--primary"
+          >
+            <div class="image__overlay">
+              <div class="image__title">Sweetheart</div>
+              <p class="image__description">Many Roses</p>
+            </div>
           </div>
         </div>
 
-        <div class="card-mobile">
-          <img src="/Stretched Images/BatmanStretch.jpeg" class="movie-img" />
-          <div class="movisectioncontainer">
-            <h4 class="mobile-information">Once upon a time in Hollywood</h4>
-            <p class="mobile-information">INFORMATION</p>
+        <div class="image">
+          <img
+            src="./Stretched Images/ScreamStretched.jpeg"
+            class="image__img"
+            ;
+          />
+          <div
+            class="image__overlay image__overlay--blur image__overlay--primary"
+          >
+            <div class="image__overlay">
+              <div class="image__title">Scream</div>
+              <p class="image__description">Many Roses</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="image">
+          <img src="./Stretched Images/IMG_2862.jpeg" class="image__img" ; />
+          <div
+            class="image__overlay image__overlay--blur image__overlay--primary"
+          >
+            <div class="image__overlay">
+              <div class="image__title">Once Upon a Time in Hollywood</div>
+              <p class="image__description">Many Roses</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="image">
+          <img
+            src="./Stretched Images/HobbsShawStretched.jpg"
+            class="image__img"
+            ;
+          />
+          <div
+            class="image__overlay image__overlay--blur image__overlay--primary"
+          >
+            <div class="image__overlay">
+              <div class="image__title">Hobbs & Shaw</div>
+              <p class="image__description">Many Roses</p>
+            </div>
           </div>
         </div>
       </section>
+
       <!--Section For Mobile Page-->
     </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <footer>
       <div class="footer-bar">
