--- a/index.html
+++ b/index.html
@@ -39,129 +39,37 @@
 
     <main>
       <!---Section For Mobile Page-->
-      <section>
-        <div class="image">
-          <img
-            src="./Stretched Images/BatmanStretch.jpeg"
-            class="image__img"
-            ;
-          />
-          <div
-            class="image__overlay image__overlay--blur image__overlay--primary"
-          >
-            <div class="image__overlay">
-              <div class="image__title">The Batman</div>
-              <p class="image__description">Star</p>
-            </div>
-          </div>
+      <section class="main-section">
+        <div class="card">
+          <a href="hobbs.html">
+            <img
+              src="./Images/Square_Eyes_Cover1.jpeg"
+              class="section-movies"
+            />
+          </a>
         </div>
 
-        <div class="image">
-          <img
-            src="./Stretched Images/AdamsStretch.jpeg"
-            class="image__img"
-            ;
-          />
-          <div
-            class="image__overlay image__overlay--blur image__overlay--primary"
-          >
-            <div class="image__overlay">
-              <div class="image__title">The Addams Family</div>
-              <p class="image__description">Star and by</p>
-            </div>
-          </div>
+        <div class="card">
+          <img src="./Images/Square_Eyes_Cover2.jpeg" class="section-movies" />
         </div>
 
-        <div class="image">
-          <img
-            src="./Stretched Images/Godzillastretch.jpeg"
-            class="image__img"
-            ;
-          />
-          <div
-            class="image__overlay image__overlay--blur image__overlay--primary"
-          >
-            <div class="image__overlay">
-              <div class="image__title">Godzilla II</div>
-              <p class="image__description">Many Roses</p>
-            </div>
-          </div>
+        <div class="card">
+          <img src="./Images/Square_Eyes_Cover3.jpeg" class="section-movies" />
         </div>
-
-        <div class="image">
-          <img
-            src="./Stretched Images/ToyStory Stretched.jpg"
-            class="image__img"
-            ;
-          />
-          <div
-            class="image__overlay image__overlay--blur image__overlay--primary"
-          >
-            <div class="image__overlay">
-              <div class="image__title">ToyStory 4</div>
-              <p class="image__description">Many Roses</p>
-            </div>
-          </div>
+        <div class="card">
+          <img src="./Images/Square_Eyes_Cover4.jpeg" class="section-movies" />
         </div>
-
-        <div class="image">
-          <img
-            src="./Stretched Images/SweetHeart Stretch.jpeg"
-            class="image__img"
-            ;
-          />
-          <div
-            class="image__overlay image__overlay--blur image__overlay--primary"
-          >
-            <div class="image__overlay">
-              <div class="image__title">Sweetheart</div>
-              <p class="image__description">Many Roses</p>
-            </div>
-          </div>
+        <div class="card">
+          <img src="./Images/Square_Eyes_Cover5.jpeg" class="section-movies" />
         </div>
-
-        <div class="image">
-          <img
-            src="./Stretched Images/ScreamStretched.jpeg"
-            class="image__img"
-            ;
-          />
-          <div
-            class="image__overlay image__overlay--blur image__overlay--primary"
-          >
-            <div class="image__overlay">
-              <div class="image__title">Scream</div>
-              <p class="image__description">Many Roses</p>
-            </div>
-          </div>
+        <div class="card">
+          <img src="./Images/Square_Eyes_Cover6.jpeg" class="section-movies" />
         </div>
-
-        <div class="image">
-          <img src="./Stretched Images/IMG_2862.jpeg" class="image__img" ; />
-          <div
-            class="image__overlay image__overlay--blur image__overlay--primary"
-          >
-            <div class="image__overlay">
-              <div class="image__title">Once Upon a Time in Hollywood</div>
-              <p class="image__description">Many Roses</p>
-            </div>
-          </div>
+        <div class="card">
+          <img src="./Images/Square_Eyes_Cover7.jpeg" class="section-movies" />
         </div>
-
-        <div class="image">
-          <img
-            src="./Stretched Images/HobbsShawStretched.jpg"
-            class="image__img"
-            ;
-          />
-          <div
-            class="image__overlay image__overlay--blur image__overlay--primary"
-          >
-            <div class="image__overlay">
-              <div class="image__title">Hobbs & Shaw</div>
-              <p class="image__description">Many Roses</p>
-            </div>
-          </div>
+        <div class="card">
+          <img src="./Images/Square_Eyes_Cover8.jpeg" class="section-movies" />
         </div>
       </section>
 
