Organized code better

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <li><a class="topbar" href="#">Movies</a></li>
         <li><a class="topbar" href="#">Categories</a></li>
         <div class="right-bar">
-          <li><a class="topbar" href="#">Profile</a></li>
-          <!--  Move up to header -->
+          <li><a class="topbar" href="#"><i class="fa-solid fa-user"></i></a></li>
+          
           <li><a class="topbar" href="#">Sign Out</a></li>
         </div>
-        <!--  Move up to header -->
+       
       </ul>
     </nav>
 
