--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
 
       <ul class="nav-ul">
         <li><a class="topbar" href="movies.html"><i class="fa-solid fa-video"></i></a></li>
-        
         <li> <a class="topbar" href="#"><i class="fa-solid fa-user"></i></a>
         </li><li><a class="topbar" href="#"> <i class="fa-solid fa-cart-plus"></i></a></li>
-        </ul>
+      </ul>
       </nav>
 
     <main>
@@ -121,7 +120,7 @@
       <div class="footer-bar">
         
         <a href="./about.html" class="about">About</a>
-        <div class="siteinfocont">Contact</div>
+        <div class="contact">Contact</div>
 
         <div class="payment">
           <a href="#"> <i class="fa-brands fa-cc-visa visa"></i> </a>
