--- a/index.html
+++ b/index.html
@@ -13,34 +13,28 @@
   </head>
   <body>
     <header>
-      <div class="header-topbar">
-        <div class="logo-top">
-          <a href="index.html">
-            <img
-              src="./SquareEyes-logos/SquareEyes-logos_white.png"
-              alt="SquareEyes logo"
-              class="logo"
-            />
-          </a>
-        </div>
-      </div>
+      <nav>
+        <ul class="nav-ul">
+          <li>
+            <a class="topbar" href="movies.html"
+              ><i class="fa-solid fa-video"></i
+            ></a>
+          </li>
+          <li>
+            <a class="topbar" href="#"><i class="fa-solid fa-user"></i></a>
+          </li>
+          <li>
+            <a class="topbar" href="#"> <i class="fa-solid fa-cart-plus"></i></a>
+          </li>
+        </ul>
+      </nav>
+  
+      <main>
+
+
+
     </header>
 
-    <nav>
-      <ul class="nav-ul">
-        <li>
-          <a class="topbar" href="movies.html"
-            ><i class="fa-solid fa-video"></i
-          ></a>
-        </li>
-        <li>
-          <a class="topbar" href="#"><i class="fa-solid fa-user"></i></a>
-        </li>
-        <li>
-          <a class="topbar" href="#"> <i class="fa-solid fa-cart-plus"></i></a>
-        </li>
-      </ul>
-    </nav>
 
     <main>
       
@@ -102,7 +96,7 @@
       <ul class="footer-ul">
         <div class="footer-bar">
           <a href="./about.html" class="about">About</a>
-          <div class="contact">Contact</div>
+          <div class="contact">Email: SquareEyes@outlook.com </div>
 
           <div class="payment">
             <a href="#"> <i class="fa-brands fa-cc-visa visa"></i> </a>
