--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <header>
       
       <input type="checkbox" id="menu-checkbox"/>
-      <label for="menu-checkbox"><i class="fas fa-bars"></i></label>
+      <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
       <nav>
         <a href="index.html"><i class="fa-solid fa-house-user faic"></i></a>
         <a href="#"><i class="fa-solid fa-film faic"></i></a>
@@ -54,6 +54,8 @@
 
 <section id="aboutpage">
 <h1>Thank you for visiting SquareEyes</h1>
+<h2>Our vision at SquareEyes is </h2>
+
 <p>  </p>
 </div>
 
