--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
     <link rel="stylesheet" href="./CSS/checkout.css">
     <title>About</title>
 </head>
@@ -39,7 +40,7 @@
        
     
       </nav>
-  <img src="./SquareEyes-logos/SquareEyes-logos_white.png" class="logo"/>
+  <img src="./SquareEyes-logos/SquareEyes-logos_white.png" class="logo" alt="squareeyeslogo"/>
   
 
     </header>
@@ -53,8 +54,10 @@
 
 
 <section id="aboutpage">
-<h1>Thank you for visiting SquareEyes</h1>
-<h2>Our vision at SquareEyes is </h2>
+<h1>SquareEyes</h1>
+<p>Thank you for visiting SquareEyes! Our vision is to deliver high quality films on demand, and our goal is to connect film-lovers around the world. 
+
+  We offer a high selection of films from well-known filmmakers as well as interesting movies from small, up-and-coming filmmakers. SquareEyes is a non-profit website and the money you spend on films here, goes directly to the people who made them.</p>
 
 <p>  </p>
 </div>
