--- a/checkout.html
+++ b/checkout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   
     <title>Checkout Page</title>
     <link rel="stylesheet" href="./CSS/styles.css" />
     <script
@@ -28,7 +29,7 @@
        
     
       </nav>
-  <img src="./SquareEyes-logos/SquareEyes-logos_white.png" class="logo"/>
+  <img src="./SquareEyes-logos/SquareEyes-logos_white.png" class="logo" alt="squareeyeslogo"/>
   
 
     </header>
@@ -102,7 +103,7 @@
 
 
   <div class="movie-checkout-container">
-<img src="./Images/Square_Eyes_Cover7.jpeg" class="bat-checkout-img">
+<img src="./Images/Square_Eyes_Cover7.jpeg" class="bat-checkout-img" alt="The Batman">
 <a href="confirmation.html"><button class="btn btn-checkout"">Buy Now</button></a>
 </div>
 
