--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="SquareEyes website for buying the newest movies available, at a reasonable price. We strive to be the best in the market, and our goal is to give smaller film-makers a opportunity to showcase their movies." />
+    <title>Homepage</title>
     <link rel="stylesheet" href="./CSS/styles.css" />
     <script
       src="https://kit.fontawesome.com/868d223859.js"
@@ -30,7 +31,7 @@
        
     
       </nav>
-  <img src="./SquareEyes-logos/SquareEyes-logos_white.png" class="logo"/>
+  <img src="./SquareEyes-logos/SquareEyes-logos_white.png" class="logo" alt="squareeyeslogo"/>
   
 
     </header>
@@ -134,7 +135,7 @@
 
 
 <div class="cardrow">
-  <img src="./Action/A History of Violence.jpeg" class="movie" class="A History of Violence"/>
+  <img src="./Action/A History of Violence.jpeg" class="movie" class="A History of Violence" alt="A History of Violence"/>
 </div>
 
 
